<resources>
    <string name="app_name">Semainemobile</string>
    <string name="login_placeholder_label">Nom d\'utilisateur</string>
    <string name="password_placeholder_label">Mot de passe</string>
    <string name="signin_button_label">Se connecter</string>
    <string name="signup_button_label">S\'inscrire</string>
    <string name="label_success_login">Vous êtes connecté</string>
    <string name="label_fail_login">Connexion impossible</string>
    <string name="label_adress_title">tu rentres chez toi après ?</string>
    <string name="label_adress">Entre une adresse</string>
    <string name="button_main">Lancer le turn-up 🎉</string>
    <string name="button_transport">Ça va rentrer</string>
    <string name="confirmLabel">Tu seras alerté(e) 20min avant les derniers métros</string>
    <string name="enter_adress_label">Je rentre au</string>
    <string name="info_code_label">Vérifie que tout le monde rentre bien avec les codes turn-up !</string>
    <string name="get_code_btn">Choppe ton code 👀</string>
    <string name="new_code_label">Ou récup\' un code</string>
    <string name="last_metro_label">Dernier métro de la nuit</string>
    <string name="more_info_label">voir les solutions après fermeture du métro</string>
    <string name="validate_btn_label">GO !</string>
    <string name="share_code_text_label">Mon code à partager</string>
    <string name="code_label">3 2 F 7</string>
    <string name="code_validate_label">Ton ami(e) sera alerté(e) lors de ton arrivée à bon port ⚓️.</string>
    <string name="code_validate_label2">Mais elle ne pourra pas avoir accès à ta position !</string>
    <string name="turnup_on_label">Turn up est lancé !</string>
    <string name="create_code_label">Rentrer un code</string>
    <string name="code_value_label">C O D E</string>
    <string name="name_friend_text_label">Nom de l\'ami(e)</string>
    <string name="info_label">Tu seras alerté(e) lors de l’arrivée à bon port de ton ami.</string>
    <string name="validate_btn">Valider</string>
    <string name="follow_activated_label">Suivi activé !</string>
    <string name="friends_follow_label">Tu seras alerté(e) quand Jules sera arrivé(e) chez lui.</string>
    <string name="metroSchedule">Arrivée à 0h34</string>
    <string name="metroTime">13 min</string>
    <string name="contentDescriptionMetro">Metro images</string>
    <string name="contentDescriptionPin">Pin image</string>
    <string name="textTitle1">turn</string>
    <string name="textTitle2">-</string>
    <string name="textTitle3">up</string>
    <string name="imageLogo">Logo\'s image</string>
    <string name="otherTransport1">ou</string>
    <string name="otherTransport2">Uber image</string>
    <string name="otherTransport3">|</string>
    <string name="transportPrice">24€</string>
    <string name="otherTransport4">Lime logo</string>
    <string name="priceTransport2">17€</string>
    <string name="confirmationImg">confirmation image</string>
    <string name="quitButton">Close button</string>
</resources>
