<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgNight"
    android:clickable="false"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="411dp"
        android:layout_height="132dp"
        android:background="@drawable/header"
        app:layout_constraintBottom_toBottomOf="@+id/editAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/label_adress"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/whiteTxt"
        android:textColorHint="@color/whiteTxt"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/pinPosition"
        android:layout_width="23dp"
        android:layout_height="25dp"
        android:clickable="true"
        android:contentDescription="@string/contentDescriptionPin"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/editAddress"
        app:layout_constraintEnd_toEndOf="@+id/editAddress"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editAddress"
        app:layout_constraintTop_toTopOf="@+id/editAddress"
        app:layout_constraintVertical_bias="0.434"
        app:srcCompat="@drawable/myposition" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/enter_adress_label"
        android:textColor="@color/whiteTxt"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:text="@string/info_code_label"
        android:textAlignment="center"
        android:textColor="@color/whiteTxt"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="24sp" />

    <TextView
        android:id="@+id/getCodeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/new_code_label"
        android:textColor="@color/whiteTxt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getCodeBtn" />

    <Button
        android:id="@+id/getCodeBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corner"
        android:textAllCaps="false"
        android:text="@string/get_code_btn"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/last_metro_label"
        android:textAllCaps="true"
        android:textColor="@color/yellow_last_metro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddress" />

    <TextView
        android:id="@+id/metroBackground"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corner_transport"
        android:textAlignment="viewEnd"
        android:textColor="@color/bgNight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/metroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/metroSchedule"
        android:textColor="@color/bgNight"
        app:layout_constraintBottom_toBottomOf="@+id/metroBackground"
        app:layout_constraintEnd_toEndOf="@+id/metroBackground"
        app:layout_constraintTop_toTopOf="@+id/metroBackground" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/contentDescriptionMetro"
        app:layout_constraintBottom_toBottomOf="@+id/metroBackground"
        app:layout_constraintEnd_toStartOf="@+id/metroText"
        app:layout_constraintTop_toTopOf="@+id/metroBackground"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="21dp"
        android:layout_marginEnd="46dp"
        android:contentDescription="@string/contentDescriptionMetro"
        app:layout_constraintBottom_toBottomOf="@+id/metroBackground"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/metroBackground"
        app:srcCompat="@drawable/metro" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="25dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/contentDescriptionMetro"
        app:layout_constraintBottom_toBottomOf="@+id/metroBackground"
        app:layout_constraintStart_toStartOf="@+id/metroBackground"
        app:layout_constraintTop_toTopOf="@+id/metroBackground"
        app:srcCompat="@drawable/clock" />

    <TextView
        android:id="@+id/metroTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/metroTime"
        android:textColor="@color/Orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/metroBackground"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/metroBackground" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="93dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotype" />

    <ImageView
        android:id="@+id/otherTransport2"
        android:layout_width="48dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/otherTransport2"
        app:layout_constraintBottom_toBottomOf="@+id/otherTransport3"
        app:layout_constraintEnd_toStartOf="@+id/priceTransport"
        app:layout_constraintTop_toTopOf="@+id/otherTransport3"
        app:srcCompat="@drawable/uber" />

    <TextView
        android:id="@+id/otherTransport1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/otherTransport1"
        android:textColor="@color/whiteTxt"
        app:layout_constraintBottom_toBottomOf="@+id/otherTransport2"
        app:layout_constraintEnd_toStartOf="@+id/otherTransport2"
        app:layout_constraintTop_toTopOf="@+id/otherTransport2" />

    <TextView
        android:id="@+id/otherTransport3"
        android:layout_width="6dp"
        android:layout_height="42dp"
        android:layout_marginTop="42dp"
        android:text="@string/otherTransport3"
        android:textColor="@color/purple_corner"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metroBackground" />

    <TextView
        android:id="@+id/priceTransport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/transportPrice"
        android:textColor="@color/whiteTxt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/otherTransport3"
        app:layout_constraintEnd_toStartOf="@+id/otherTransport3"
        app:layout_constraintTop_toTopOf="@+id/otherTransport3" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="51dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/otherTransport4"
        app:layout_constraintBottom_toBottomOf="@+id/otherTransport3"
        app:layout_constraintStart_toEndOf="@+id/otherTransport3"
        app:layout_constraintTop_toTopOf="@+id/otherTransport3"
        app:srcCompat="@drawable/lime" />

    <TextView
        android:id="@+id/priceTransport2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/priceTransport2"
        android:textColor="@color/whiteTxt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />


</androidx.constraintlayout.widget.ConstraintLayout>